--- a/public/index.html
+++ b/public/index.html
@@ -103,7 +103,7 @@
         <div class="respawn-overlay hidden" id="respawnOverlay">
             <div class="respawn-content">
                 <h2 data-i18n="game.youDied">OLDUN</h2>
-                <p data-i18n="game.respawning">Yeniden doguyor <span id="respawnTimer">3</span> saniye...</p>
+                <p>Yeniden doguyor <span id="respawnTimer">3</span> saniye...</p>
             </div>
         </div>
         
